docs(swagger): task activity
