# docs/swagger.yaml
@@ -38,6 +38,15 @@ definitions:
     - task_id
     - user_id
     type: object
+  model.PrettyActivity:
+    properties:
+      hours:
+        type: integer
+      minutes:
+        type: number
+      name:
+        type: string
+    type: object
   model.StartTask:
     properties:
       name:
@@ -111,6 +120,52 @@ info:
   title: Time Tracker API
   version: "1.0"
 paths:
+  /tasks/activity/{user_id}:
+    get:
+      consumes:
+      - application/json
+      description: Получение трудозатрат по пользователю за период задача-сумма часов
+        и минут с сортировкой от большей затраты к меньшей
+      parameters:
+      - description: User ID
+        example: 1
+        in: path
+        minimum: 1
+        name: user_id
+        required: true
+        type: integer
+      - example: "2025-01-02T15:04:05Z"
+        format: date-time
+        in: query
+        name: end_time
+        required: true
+        type: string
+      - example: "2024-01-02T15:04:05Z"
+        format: date-time
+        in: query
+        name: start_time
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.PrettyActivity'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.InternalServerErrorResponse'
+      summary: Task activity
+      tags:
+      - tasks
   /tasks/end:
     post:
       consumes:
