# internal/controller/http/v1/task.go
@@ -12,7 +12,6 @@ import (
 	"go.uber.org/zap"
 	"net/http"
 	"strconv"
-	"time"
 )
 
 type taskRoutes struct {
@@ -110,6 +109,19 @@ func (r *taskRoutes) end(c *gin.Context) {
 	c.JSON(http.StatusOK, task)
 }
 
+// activity of a task
+//
+//	@Summary		Task activity
+//	@Description	Получение трудозатрат по пользователю за период задача-сумма часов и минут с сортировкой от большей затраты к меньшей
+//	@Tags			tasks
+//	@Accept			json
+//	@Produce		json
+//	@Param			user_id	path	int			true	"User ID"	example(1)	minimum(1)
+//	@Param			period	query		model.Period	true	"Period"
+//	@Success		200		{array}	model.PrettyActivity
+//	@Failure		400		{object}	http.Response
+//	@Failure		500		{object}	http.InternalServerErrorResponse
+//	@Router			/tasks/activity/{user_id} [get]
 func (r *taskRoutes) activity(c *gin.Context) {
 	userIdStr := c.Param("user_id")
 	userId, err := strconv.ParseInt(userIdStr, 10, 64)
@@ -123,10 +135,7 @@ func (r *taskRoutes) activity(c *gin.Context) {
 		return
 	}
 
-	var input struct {
-		StartTime time.Time `form:"start_time" binding:"required" time_format:"2006-01-02T15:04:05Z"`
-		EndTime   time.Time `form:"end_time" binding:"required" time_format:"2006-01-02T15:04:05Z"`
-	}
+	var input model.Period
 	if err := c.ShouldBindQuery(&input); err != nil {
 		errorResponse(c, http.StatusBadRequest, "start or end time not provided or have invalid format(2006-01-02T15:04:05Z)")
 		return
